linked style sheet and added font family

--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./assets/style-sheet.css" rel="stylesheet"/>
     <title>CSS Cheat Sheet</title>
 </head>
 
 <body>
 
-    <header>CSS Snippet Cheatsheet</header>
+    <header>
+        <h1>CSS Snippet Cheatsheet</h1>
+        <p>Ever have trouble recalling the exact syntax for your favourite CSS code? Give it a permanent home and add it to this page! Select any snippet below and it'll automaticallys select all of the code for you to copy.</p>
+    </header>
     
-    <p>Ever have trouble recalling the exact syntax for your favourite CSS code? Give it a permanentn home and add it to this page! Select any snippet below and it'll automaticallys select all of the code for you to copy.</p>
+    <main>
+
+
+
+    </main>
+
+    <footer>
+        <h3>Made with 💓 and CSS</h3>
+    </footer>
+
 </body>
 
 </html>
