added text content to HTML file.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,37 @@
     
     <main>
 
+    <section class="main-grid">
+        <section class="flexbox-row">
+            <h2>Flexbox Row</h2>
+            <p>Use these three properties to create a Flexbox row layout.</p>
+        </section>
 
+        <section class="flexbox-column">
+            <h2>Flexbox Column</h2>
+            <p>Use this to create a Flexbox column layout.</p>
+        </section>
+
+        <section class="CSS-grid-layout">
+            <h2>CSS Grid Layout</h2>
+            <p>Build a 12-column layout using CSS Grid.</p>
+        </section>
+
+        <section class="linear-gradients">
+            <h2>Linear Gradients</h2>
+            <p>This will create a background linear gradient from top to bottom.</p>
+        </section>
+
+        <section class="box-transition-glow">
+            <h2>Box Transition Glow</h2>
+            <p>Use transition and box shadows to glow on hover.</p>
+        </section>
+
+        <section class="overlay-card-with-title">
+            <h2>Overlay Card with Title</h2>
+            <p>Use position properties and negative margins to raise elements higher than their natural starting point.</p>
+        </section>
+    </section>
 
     </main>
 
