added CSS grid layout structure.

--- a/index.html
+++ b/index.html
@@ -11,38 +11,38 @@
 
     <header>
         <h1>CSS Snippet Cheatsheet</h1>
-        <p>Ever have trouble recalling the exact syntax for your favourite CSS code? Give it a permanent home and add it to this page! Select any snippet below and it'll automaticallys select all of the code for you to copy.</p>
+        <p>Ever have trouble recalling the exact syntax for your favourite CSS code? Give it a permanent home and add it to this page! Select any snippet below and it'll automatically select all of the code for you to copy.</p>
     </header>
     
     <main>
 
     <section class="main-grid">
-        <section class="flexbox-row">
+        <section id="flexbox-row" class="grid-area">
             <h2>Flexbox Row</h2>
             <p>Use these three properties to create a Flexbox row layout.</p>
         </section>
 
-        <section class="flexbox-column">
+        <section id="flexbox-column" class="grid-area">
             <h2>Flexbox Column</h2>
             <p>Use this to create a Flexbox column layout.</p>
         </section>
 
-        <section class="CSS-grid-layout">
+        <section id="CSS-grid-layout" class="grid-area">
             <h2>CSS Grid Layout</h2>
             <p>Build a 12-column layout using CSS Grid.</p>
         </section>
 
-        <section class="linear-gradients">
+        <section id="linear-gradients" class="grid-area">
             <h2>Linear Gradients</h2>
             <p>This will create a background linear gradient from top to bottom.</p>
         </section>
 
-        <section class="box-transition-glow">
+        <section id="box-transition-glow" class="grid-area">
             <h2>Box Transition Glow</h2>
             <p>Use transition and box shadows to glow on hover.</p>
         </section>
 
-        <section class="overlay-card-with-title">
+        <section id="overlay-card-with-title" class="grid-area">
             <h2>Overlay Card with Title</h2>
             <p>Use position properties and negative margins to raise elements higher than their natural starting point.</p>
         </section>
