--- a/index.html
+++ b/index.html
@@ -21,35 +21,35 @@
             <h2>Flexbox Row</h2>
             <p>Use these three properties to create a Flexbox row layout.</p>
             <pre>
-            .row {
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-            }
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
             </pre>
         </section>
 
         <section id="flexbox-column" class="grid-area">
             <h2>Flexbox Column</h2>
             <p>Use this to create a Flexbox column layout.</p>
-            <pre>
-            .column {
-                display: flex;
-                flex-direction: column;
-            }
-            </pre>
+<pre>
+.column {
+    display: flex;
+    flex-direction: column;
+}
+</pre>
         </section>
 
         <section id="CSS-grid-layout" class="grid-area">
             <h2>CSS Grid Layout</h2>
             <p>Build a 12-column layout using CSS Grid.</p>
             <pre>
-            .grid {
-                display: grid;
-                width: 100%;
-                grid-template-columns: 
-               repeat(12, 1fr);
-            }
+.grid {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 
+  repeat(12, 1fr);
+}
             </pre>
         </section>
 
@@ -57,12 +57,11 @@
             <h2>Linear Gradients</h2>
             <p>This will create a background linear gradient from top to bottom.</p>
             <pre>
-            .linear-gradient-background {
-                background-image: linear-gradient(
-                    rgba(232,102,236,0.3) 0%
-                    rgba(232, 102, 236, 0.6) 100%
-                );
-            }
+.linear-gradient-background {
+    background-image: linear-gradient(
+    rgba(232,102,236,0.3) 0%
+    rgba(232, 102, 236, 0.6) 100%);
+}
             </pre>
         </section>
 
@@ -70,17 +69,17 @@
             <h2>Box Transition Glow</h2>
             <p>Use transition and box shadows to glow on hover.</p>
             <pre>
-            .code-card .card-header {
-                border-radius: 8px;
-                transition: all 0.5s ease-in-out;
-            }
+.code-card .card-header {
+border-radius: 8px;
+transition: all 0.5s ease-in-out;
+}
 
-            .code-card:hover,
-            .code-card:hover .card-header {
-                box-shadow: inset 0px 0px 8px
-            rgba(232, 102, 236, 1), 0 0 15px
-            rgba(232, 102, 236, 1);
-            }
+.code-card:hover,
+.code-card:hover .card-header {
+    box-shadow: inset 0px 0px 8px
+rgba(232, 102, 236, 1), 0 0 15px
+rgba(232, 102, 236, 1);
+}
             </pre>
         </section>
 
@@ -88,10 +87,10 @@
             <h2>Overlay Card with Title</h2>
             <p>Use position properties and negative margins to raise elements higher than their natural starting point.</p>
             <pre>
-            .card-header {
-                position: relative;
-                margin-top: -20px;
-            }
+.card-header {
+position: relative;
+margin-top: -20px;
+}
             </pre>
         </section>
     </section>
